[tool.poetry]
name = "canst"
version = "0.1.0"
description = "A toolbox for CAN bus security."
authors = ["xia0long"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
cantools = "^36.7.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = {version = "^21.11b1", allow-prereleases = true}
mypy = "^0.910"
pre-commit = "^2.15.0"
isort = "^5.10.1"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
canst = "canst.__main__:canst"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
